syntax="proto2";

package yamcs.protobuf.events;

option java_package = "org.yamcs.protobuf";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";


message Event {
  // The severity levels, in order are:
  // INFO, WATCH, WARNING, DISTRESS, CRITICAL, SEVERE.
  //
  // A migration is underway to fully move away from the legacy
  // INFO, WARNING, ERROR levels.
  enum EventSeverity {
    INFO = 0;
    WARNING = 1;

    // Legacy, avoid use.
    ERROR = 2 [deprecated=true];

    WATCH = 3;

    // Placeholder for future WARNING constant.
    // (correctly sorted between WATCH and DISTRESS)
    //
    // Most clients can ignore, this state is here
    // to give Protobuf clients (Python Client, Yamcs Studio)
    // the time to add a migration for supporting both WARNING
    // and WARNING_NEW (Protobuf serializes the number).
    //
    // Then in a later phase, we move from:
    // WARNING=1, WARNING_NEW=4
    //
    // To:
    // WARNING_OLD=1, WARNING=4
    //
    // (which is a transparent change to JSON clients)
    WARNING_NEW = 4;

    DISTRESS = 5;
    CRITICAL = 6;
    SEVERE = 7;
  }
  optional string source = 1;
  optional google.protobuf.Timestamp generationTime = 2;
  optional google.protobuf.Timestamp receptionTime = 3;
  optional int32 seqNumber = 4;
  optional string type = 5;
  optional string message = 6;
  optional EventSeverity severity = 7[default=INFO];
  
  // Set by API when event was posted by a user
  optional string createdBy = 10;

  // Additional properties
  map<string, string> extra = 11;
}
